# rocket-rust-example

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-integration.yaml  docker-compose.yaml
migrations/2020-07-14-200451_example/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/configs/: config.rs
src/datasources/: db.rs
src/domains/: bike.rs  bike_errors.rs  bike_repo.rs  mod.rs
src/handlers/: mod.rs  rest.rs  rest_models.rs
src/managers/: bike_managers.rs  manager_errors.rs  mod.rs
src/repositories/: bike_db_repository.rs  db_models.rs  mocks.rs  mod.rs
tests/: integration_test.rs
